# HArdalarm

./: HArdalarm.cabal  README.md
src/: Main.hs  Moodclock.hs
src/serialrgbalarm/: serialrgbalarm.ino
